@@ -49,8 +49,11 @@ mono (2.6.3-1~pre1) unstable; urgency=low
       moonlight 2.0's debian/copyright written by Jo Shields with minor
       modifications.
     + Updated debian/* copyright.
+  * debian/rules:
+    + Dropped build-arch/indep split as we needed to build 90% of the classlib
+      for the test suite anyhow.
 
- -- Mirco Bauer <meebey@debian.org>  Sat, 05 Jun 2010 22:51:38 +0200
+ -- Mirco Bauer <meebey@debian.org>  Sun, 06 Jun 2010 17:29:50 +0200
 
 mono (2.4.4~svn151842-2) unstable; urgency=low
 
